# hotshot-builder-core

./: .gitignore  Cargo.toml  README.md  crates.js  flake.nix  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: build.yml  build_nix.yml  build_windows.yml  coverage.yml  debug_build.yml  lint.yml  update_nix.yml
.zed/: settings.json
examples/: basic.rs
hotshot_builder_core/: all.html  enum.WaitAndKeep.html  index.html  sidebar-items.js  struct.BlockId.html  struct.BuilderStateId.html
hotshot_builder_core/builder_state/: enum.MessageType.html  enum.Status.html  enum.TransactionSource.html  enum.TriggerStatus.html  index.html  sidebar-items.js  struct.BuildBlockInfo.html  struct.BuilderState.html  struct.BuiltFromProposedBlock.html  struct.DAProposalInfo.html  struct.DAProposalMessage.html  struct.DaProposalMessage.html  struct.DecideMessage.html  struct.QCMessage.html  struct.RequestMessage.html  struct.ResponseMessage.html  struct.TransactionMessage.html  trait.BuilderProgress.html  type.TxTimeStamp.html
hotshot_builder_core/service/: enum.RecvError.html  enum.TryRecvError.html  fn.broadcast.html  fn.run_non_permissioned_standalone_builder_service.html  fn.run_permissioned_standalone_builder_service.html  index.html  sidebar-items.js  struct.BlockInfo.html  struct.BuilderStatesInfo.html  struct.GlobalState.html  struct.ProposedBlockId.html  struct.ProxyGlobalState.html  struct.ReceivedTransaction.html
hotshot_builder_core/testing/: index.html  sidebar-items.js
hotshot_builder_core/testing/basic_test/: enum.RecvError.html  enum.TryRecvError.html  fn.broadcast.html  index.html  sidebar-items.js  struct.BroadcastReceiver.html  struct.BroadcastSender.html  struct.DAProposal.html  struct.DaProposal.html  struct.GeneralStaticCommittee.html  struct.Leaf.html  struct.Proposal.html  struct.QuorumProposal.html  struct.SimpleCertificate.html  struct.StaticElectionConfig.html  struct.SuccessThreshold.html  struct.ViewNumber.html  trait.BlockPayload.html  trait.ConsensusTime.html  trait.NodeType.html  type.BLSPrivKey.html  type.BLSPubKey.html  type.QuorumCertificate.html
hs_builder_core/: all.html  index.html  sidebar-items.js
hs_builder_core/builder_state/: enum.MessageType.html  enum.Status.html  enum.TransactionSource.html  index.html  sidebar-items.js  struct.BuildBlockInfo.html  struct.BuilderState.html  struct.DAProposalMessage.html  struct.DecideMessage.html  struct.QCMessage.html  struct.RequestMessage.html  struct.ResponseMessage.html  struct.TransactionMessage.html  trait.BuilderProgress.html  type.TxTimeStamp.html
hs_builder_core/data_source/: index.html  sidebar-items.js  struct.Event.html  struct.SystemContext.html  struct.SystemContextHandle.html  trait.NodeImplementation.html
hs_builder_core/service/: fn.run_standalone_builder_service.html  index.html  sidebar-items.js  struct.GlobalState.html  struct.GlobalStateTxnSubmitter.html  struct.Options.html
hs_builder_core/testing/: index.html
hs_builder_core/testing/basic_test/: enum.RecvError.html  enum.TryRecvError.html  fn.broadcast.html  index.html  sidebar-items.js  struct.BroadcastReceiver.html  struct.BroadcastSender.html  struct.DAProposal.html  struct.GeneralStaticCommittee.html  struct.Leaf.html  struct.Proposal.html  struct.QuorumProposal.html  struct.SimpleCertificate.html  struct.StaticElectionConfig.html  struct.SuccessThreshold.html  struct.ViewNumber.html  trait.BlockPayload.html  trait.BuilderType.html  trait.ConsensusTime.html  trait.NodeType.html  type.BLSPrivKey.html  type.BLSPubKey.html  type.QuorumCertificate.html
search.desc/hotshot_builder_core/: hotshot_builder_core-desc-0-.js
src/: api.rs  builder_state.rs  data_source.rs  lib.rs  service.rs  testing.rs
src/hotshot_builder_core/: builder_state.rs.html  lib.rs.html  service.rs.html  testing.rs.html
src/hotshot_builder_core/testing/: basic_test.rs.html
src/hs_builder_core/: builder_state.rs.html  data_source.rs.html  lib.rs.html  service.rs.html  testing.rs.html
src/hs_builder_core/testing/: basic_test.rs.html
src/tasks/: mod.rs
src/testing/: basic_test.rs
trait.impl/clap_builder/derive/: trait.Args.js  trait.FromArgMatches.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  (+1 more)
type.impl/std/: primitive.u128.js
(+17 files in other folders)
