[package]
name = "hotshot-builder-core"
version = "0.1.3"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.7.0"
async-compatibility-layer = { version = "1.1", default-features = false, features = [
    "logging-utils",
] }
async-lock = "2.8"
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
committable = "0.2"
futures = "0.3"
hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.35" }
hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.35" }
hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.3" }
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.35" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
snafu = "0.8"
surf-disco = "0.6"
tagged-base64 = "0.4"
tide-disco = "0.6"
tracing = "0.1"
vbs = "0.1"

[dev-dependencies]
hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.35" }
